--- a/NFeCancelamento/pom.xml
+++ b/NFeCancelamento/pom.xml
@@ -33,4 +33,13 @@
             <version>2.1</version>
         </dependency>
     </dependencies>
+    <build>
+      <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.1</version>
+        </plugin>
+    </plugins>
+  </build>
 </project>
