--- a/NFeComplianceServices/.classpath
+++ b/NFeComplianceServices/.classpath
@@ -30,9 +30,8 @@
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -47,12 +46,5 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Dev/bureauVeritas/NFeComplianceServices/NFeComplianceServices/src/main/resources/libs/axis.jar"/>
-	<classpathentry kind="lib" path="C:/Dev/bureauVeritas/NFeComplianceServices/NFeComplianceServices/src/main/resources/libs/commons-discovery-0.2.jar"/>
-	<classpathentry kind="lib" path="C:/Dev/bureauVeritas/NFeComplianceServices/NFeComplianceServices/src/main/resources/libs/javax.wsdl_1.6.2.v201012040545.jar"/>
-	<classpathentry kind="lib" path="C:/Dev/bureauVeritas/NFeComplianceServices/NFeComplianceServices/src/main/resources/libs/jaxrpc.jar"/>
-	<classpathentry kind="lib" path="C:/Dev/bureauVeritas/NFeComplianceServices/NFeComplianceServices/src/main/resources/libs/org.apache.commons.logging_1.1.1.v201101211721.jar"/>
-	<classpathentry kind="lib" path="C:/Dev/bureauVeritas/NFeComplianceServices/NFeComplianceServices/src/main/resources/libs/saaj.jar"/>
-	<classpathentry kind="lib" path="C:/Dev/bureauVeritas/NFeComplianceServices/NFeComplianceServices/src/main/resources/libs/javax.persistence-2.1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
