--- a/NFSeEmissao/pom.xml
+++ b/NFSeEmissao/pom.xml
@@ -32,5 +32,13 @@
             <artifactId>log4j-core</artifactId>
             <version>2.1</version>
         </dependency>
-    </dependencies>
+    </dependencies><build>
+      <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.1</version>
+        </plugin>
+    </plugins>
+  </build>
 </project>
